<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    android:orientation="vertical"
    tools:context="com.diego.tutorial30.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Enter your Message Here"
        android:textColor="@color/white"
        android:layout_weight="2"
        />

    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/white"
        android:gravity="top"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="Adjust Font"
        android:textColor="@color/white"

        />
    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="Some Radio Button"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"

        >
        <RadioButton
            android:id="@+id/radio_button_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/red"
            />
        <RadioButton
            android:id="@+id/radio_button_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/blue"
            />
        <RadioButton
            android:id="@+id/radio_button_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/green"
            />
    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center"
        android:onClick="saveSettings"
        />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_gravity="center"
        android:onClick="clearSettings"
        />

</LinearLayout>
